# libayatana-appindicator

./: .build.yml  .bzrignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL.md  Makefile.am  Makefile.am.coverage  Makefile.am.enum  Makefile.am.marshal  Makefile.in  NEWS  README  README.md  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gtk-doc.local.make  gtk-doc.make
.bzr-builddeb/: default.conf
bindings/: CMakeLists.txt  Makefile.am  Makefile.in
bindings/mono/: ApplicationIndicator.custom  ApplicationIndicatorCustom.cs  ApplicationIndicatorCustom.cs.in  AssemblyInfo.cs  CMakeLists.txt  Makefile.am  Makefile.in  TestAyatanaIndicator.cs  TestIndicator.cs  app-indicator.sources.xml  app-indicator.sources.xml.in  appindicator-sharp-0.1.pc.in  appindicator-sharp.dll.config.in  ayatana-appindicator-sharp-0.1.pc.in  ayatana-appindicator-sharp.dll.config  ayatana-appindicator-sharp.dll.config.in  ayatana-appindicator-sharp.snk  ayatana-appindicator-sharp3-0.1.pc.in  ayatana-appindicator3-sharp-0.1.pc.in  ayatana-appindicator3-sharp.dll.config  libappindicator-api.metadata  libappindicator-api.raw  libayatana-appindicator-api.metadata  libayatana-appindicator3-api.metadata  policy.0.0.appindicator-sharp.config.in  policy.0.0.ayatana-appindicator-sharp.config.in  policy.0.0.ayatana-appindicator3-sharp.config.in  policy.0.1.ayatana-appindicator-sharp.config.in  policy.0.1.ayatana-appindicator3-sharp.config.in  policy.2.0.appindicator-sharp.config.in
bindings/mono/examples/: AyatanaIndicatorExample.cs  CMakeLists.txt  IndicatorExample.cs  Makefile.am  Makefile.in  ayatana-indicator-example.in  indicator-example.in
bindings/python/: Makefile.am  Makefile.in  __init__.py  appindicator-arg-types.py  appindicator.defs  appindicator.override  appindicator.override.in  appindicatormodule.c  ayatana_appindicator.override.in  ayatana_appindicatormodule.c
bindings/vala/: AyatanaAppIndicator-2.0.metadata  CMakeLists.txt  Makefile.am  Makefile.in  appindicator-0.1-custom.vala  ayatana-appindicator-0.1-custom.vala  ayatana-appindicator-custom.vala  ayatana-appindicator3-0.1.deps
bindings/vala/examples/: CMakeLists.txt  Makefile.am  Makefile.in  ayatana-indicator-example.vala  indicator-example.vala
cmake/: FindVala.cmake  UseGObjectIntrospection.cmake  UseVala.cmake
data/: Makefile.am  Makefile.in  indicator-application.service.in  indicator-custom.service.in  ordering-override.keyfile
debian/: changelog  control  copyright  gir1.2-appindicator-0.1.install  gir1.2-appindicator3-0.1.install  gir1.2-ayatanaappindicator-0.1.install  gir1.2-ayatanaappindicator3-0.1.install  indicator-application.install  indicator-custom.install  libappindicator-dev.install  libappindicator-doc.install  libappindicator0-cil.install  libappindicator0.0-cil.install  libappindicator0.0-cil.installcligac  libappindicator0.1-cil-dev.install  rules  (+25 more)
doc/: AyatanaAppIndicator-2.0.toml.in  CMakeLists.txt
docs/reference/: CMakeLists.txt  Makefile.am  Makefile.in  libappindicator-docs.sgml  libappindicator-docs.sgml.in  libappindicator-sections.txt  libappindicator.types  libayatana-appindicator-docs.sgml.in  libayatana-appindicator-sections.txt  scangobj.sh.in  version.xml
docs/reference/html/: annotation-glossary.html  api-index-0-5.html  api-index-deprecated.html  api-index-full.html  ch01.html  index.html  index.sgml  libappindicator-app-indicator.html  libappindicator.devhelp  libappindicator.devhelp2  object-tree.html
docs/reference/tmpl/: app-indicator.sgml  libappindicator-unused.sgml
docs/reference/xml/: annotation-glossary.xml  api-index-0.5.xml  api-index-deprecated.xml  api-index-full.xml  app-indicator.xml
example/: CMakeLists.txt  Makefile.am  Makefile.in  simple-client-vala.c  simple-client-vala.vala  simple-client.c
examples/: CMakeLists.txt  simple-client-python.py  simple-client-vala.vala  simple-client.c
src/: AppIndicator-0.1.metadata  AppIndicator-0.1.metadata.in  AppIndicator3-0.1.metadata.in  AyatanaAppIndicator-0.1.metadata.in  AyatanaAppIndicator3-0.1.metadata  AyatanaAppIndicator3-0.1.metadata.in  CMakeLists.txt  Makefile.am  Makefile.in  app-indicator-enum-types.c  app-indicator-enum-types.c.in  app-indicator-enum-types.gen.c.in  app-indicator-enum-types.h  app-indicator-enum-types.h.in  app-indicator-version.h.in  app-indicator.c  app-indicator.h  app-indicator.symbols  appindicator-0.1.pc.in  appindicator-3.1.pc.in  appindicator3-0.1.pc.in  application-service-appstore.c  application-service-appstore.h  application-service-lru-file.c  application-service-lru-file.h  application-service-marshal.c  application-service-marshal.h  application-service-marshal.list  application-service-server.h  application-service-watcher.c  application-service-watcher.h  application-service.c  application-service.xml  ayatana-appindicator-0.1.pc.in  ayatana-appindicator-2.0.pc.in  ayatana-appindicator-enum-types.c.in  ayatana-appindicator-enum-types.h.in  ayatana-appindicator.c  ayatana-appindicator.h  ayatana-appindicator.symbols  (+25 more)
src/libappindicator/: app-indicator-enum-types.c  app-indicator-enum-types.c.in  app-indicator-enum-types.h  app-indicator-enum-types.h.in  app-indicator.c  app-indicator.h  appindicator-0.1.pc.in  application-indicator-enum-types.c.in  application-indicator.c
src/libapplicationindicator/: application-indicator-enum-types.c.in  application-indicator-enum-types.h.in  application-indicator.c
src/libcustomindicator/: custom-indicator-enum-types.c.in  custom-indicator-enum-types.h.in  custom-indicator.c  custom-indicator.h
tests/: CMakeLists.txt  Makefile.am  Makefile.in  run-xvfb.sh  test-approver.c  test-defines.h  test-libappindicator-dbus-client.c  test-libappindicator-dbus-server.c  test-libappindicator-fallback-item.c  test-libappindicator-fallback-watcher.c  test-libappindicator-status-client.c  test-libappindicator-status-server.c  test-libappindicator.c  test-libappindicator.desktop  test-libcustomindicator-dbus-client.c  test-libcustomindicator-dbus-server.c  test-libcustomindicator.c  test-simple-app.c
(+19 files in other folders)
